package ventas.ports.in;

public interface ConfirmarVentaUseCase {
    void confirmar(String ventaId);
}
